--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,12 @@
 {
   "name": "dawidgorecki/dbal",
   "type": "library",
-  "description": "",
-  "keywords": [],
+  "description": "Database abstraction layer (DBAL) for PHP",
+  "keywords": [
+    "php",
+    "database",
+    "dbal"
+  ],
   "homepage": "https://github.com/dawidgorecki/dbal-php",
   "license": "MIT",
   "authors": [
@@ -12,16 +16,13 @@
       "role": "Developer"
     }
   ],
-
   "require": {
     "php": ">=7.1.0",
     "ext-pdo": "*"
   },
-
   "config": {
     "bin-dir": "bin"
   },
-
   "autoload": {
     "psr-4": {
       "Reven\\DBAL\\": "src/"
